# application_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile.test  Taskfile.yml  docker-compose-prod.yaml  docker-compose.yaml  fly.toml  sqlx-data.json  test.pptx
.github/workflows/: general.yaml
client/: client.py  requirements.txt
configuration/: base.yaml  docker.yaml  local.yaml
migrations/: 20221127025021_init.sql
src/: config.rs  main.rs  model.rs  server.rs
src/db/: init.sql  transactions.rs
src/endpoints/: errors.rs  handlers.rs  messages.rs  mod.rs  register.rs  routes.rs  server.rs
src/model/: engine.rs  mod.rs  model.rs  types.rs
