[package]
name = "generate-tech-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = "1.0.143"
pretty_env_logger = "0.4.0"
serde_derive = "1.0.143"
log = "0.4.17"